<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2DEA2"
    tools:context=".FirstFragment"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_marginStart="24dp"
        android:fontFamily="casual"
        android:text="@string/猜數字"
        android:textAlignment="center"
        android:textColor="#4C3318"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427" />

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:accessibilityLiveRegion="polite"
        android:backgroundTint="#FFCA5F"
        android:insetLeft="0dp"
        android:text="@string/開始遊戲"
        android:textAlignment="center"
        android:textColor="#4C3318"
        android:textSize="20sp"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="402dp" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="64dp"
        android:layout_height="50dp"
        android:layout_marginEnd="308dp"
        android:backgroundTint="@color/button_background"
        android:fontFamily="casual"
        android:insetTop="0dp"
        android:insetBottom="6dp"
        android:text="@string/登入"
        android:textColor="#4C3318"
        android:textSize="12sp"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="532dp" />

    <Button
        android:id="@+id/button_third"
        android:layout_width="64dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/button_background"
        android:fontFamily="casual"
        android:text="@string/紀錄"
        android:textColor="@color/button_text"
        android:textSize="12sp"
        app:iconPadding="0dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="581dp" />


</androidx.constraintlayout.widget.ConstraintLayout>