<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2DEA2"
    tools:context=".SecondFragment"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="casual"
        android:text="@string/輸入數字"
        android:textAlignment="center"
        android:textColor="#4C3318"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127" />

    <TextView
        android:id="@+id/password1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:textAlignment="center"
        android:textColor="#4C3318"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303" />

    <TextView
        android:id="@+id/password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:textAlignment="center"
        android:textColor="#4C3318"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />

    <TextView
        android:id="@+id/password3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:textAlignment="center"
        android:textColor="#4C3318"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.302" />

    <TextView
        android:id="@+id/password4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:textAlignment="center"
        android:textColor="#4C3318"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.775"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.302" />

    <EditText
        android:id="@+id/blank1"
        android:layout_width="57dp"
        android:layout_height="77dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="330dp"
        android:Labelfor="@+id/edit1"
        android:autofillHints="number"
        android:ems="10"
        android:inputType="numberPassword"
        android:maxLength="@integer/material_motion_duration_short_1"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/blank2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/blank2"
        android:layout_width="57dp"
        android:layout_height="77dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="47dp"
        android:layout_marginBottom="330dp"
        android:autofillHints="number"
        android:ems="10"
        android:inputType="numberPassword"
        android:labelFor="@+id/edit2"
        android:maxLength="@integer/material_motion_duration_short_1"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/blank1"
        app:layout_constraintTop_toBottomOf="@+id/text"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/blank3"
        android:layout_width="57dp"
        android:layout_height="77dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="47dp"
        android:layout_marginBottom="330dp"
        android:autofillHints="number"
        android:ems="10"
        android:inputType="numberPassword"
        android:labelFor="@+id/Password3"
        android:maxLength="@integer/material_motion_duration_short_1"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/blank2"
        app:layout_constraintTop_toBottomOf="@+id/text"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/blank4"
        android:layout_width="57dp"
        android:layout_height="77dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="330dp"
        android:autofillHints="number"
        android:contentDescription="@string/password4"
        android:ems="10"
        android:inputType="numberPassword"
        android:labelFor="@+id/Password4"
        android:maxLength="@integer/material_motion_duration_short_1"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/blank3"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textAfterGame"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/答題結果"
        android:layout_marginStart="21dp"
        android:textAlignment="center"
        android:textColor="#4C3318"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/blank2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="308dp"
        android:layout_marginTop="410dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="274dp"
        android:textAlignment="center"
        android:textColor="#4C3318"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score2"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginStart="308dp"
        android:layout_marginTop="440dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="214dp"
        android:textAlignment="center"
        android:textColor="#4C3318"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score3"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginStart="308dp"
        android:layout_marginTop="470dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="214dp"
        android:textAlignment="center"
        android:textColor="#4C3318"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/score4"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginStart="308dp"
        android:layout_marginTop="510dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="172dp"
        android:textAlignment="center"
        android:textColor="#4C3318"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="410dp"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="274dp"
        android:textAlignment="center"
        android:textColor="#4C3318"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score10"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginTop="440dp"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="214dp"
        android:textAlignment="center"
        android:textColor="#4C3318"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score11"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginTop="470dp"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="214dp"
        android:textAlignment="center"
        android:textColor="#4C3318"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/score12"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginTop="510dp"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="172dp"
        android:textAlignment="center"
        android:textColor="#4C3318"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="102dp"
        android:backgroundTint="@color/button_background"
        android:duplicateParentState="true"
        android:editable="false"
        android:text="@string/back"
        android:textColor="@color/button_text"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blank1"
        tools:ignore="Deprecated,MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="330dp"
        android:backgroundTint="@color/button_background"
        android:text="@string/playAgain"
        android:textColor="#4C3318"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/blank3"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>